# pixy

./: ..gitignore.swp  .README.md.swp  .display_loop_pca.sh.swp  ACDemoGeom.root  CMakeLists.txt  ChargeData.cpp  ChargeData.h  ChargeHits.cpp  ChargeHits.h  Event.h  NoiseFilter.cpp  README.md  Ranking_000020122.root  RunParams.cpp  RunParams.h  main.cpp  setup.sh
Data/: TestFile_event1081_hits.csv  TestFile_event1081_pca.csv  TestFile_event1099_hits.csv  TestFile_event1099_pca.csv  TestFile_event1114_hits.csv  TestFile_event1114_pca.csv  TestFile_event1123_hits.csv  TestFile_event1123_pca.csv  TestFile_event1341_hits.csv  TestFile_event1341_pca.csv  TestFile_event1404_hits.csv  TestFile_event1404_pca.csv  TestFile_event1432_hits.csv  TestFile_event1432_pca.csv  TestFile_event1551_hits.csv  TestFile_event1551_pca.csv  TestFile_event1918_hits.csv  TestFile_event1918_pca.csv  TestFile_event1942_hits.csv  TestFile_event1942_pca.csv  TestFile_event1945_hits.csv  TestFile_event1945_pca.csv  TestFile_event1967_hits.csv  TestFile_event1967_pca.csv  TestFile_event1979_hits.csv  TestFile_event1979_pca.csv  TestFile_event218_hits.csv  TestFile_event218_pca.csv  TestFile_event277_hits.csv  TestFile_event277_pca.csv  TestFile_event374_hits.csv  TestFile_event374_pca.csv  TestFile_event617_hits.csv  TestFile_event617_pca.csv  TestFile_event637_hits.csv  TestFile_event637_pca.csv  TestFile_event751_hits.csv  TestFile_event751_pca.csv  TestFile_event917_hits.csv  TestFile_event917_pca.csv  (+7 more)
ParaView/lib/paraview-5.2/: hydra_nameserver  libQtCLucene.so.4  libQtCore.so.4  libQtHelp.so.4  libQtNetwork.so.4  libQtSql.so.4  libbz2.so.1.0  libfontconfig.so.1  libhdf5.so.8.0.2  libmpich.so.3  libmpich.so.3.3  libmpichcxx.so.3  libopa.so.1  libospray.so.0  libpng16.so.16  libswscale.so.2  libsz.so.2  libvtkChartsCorePython27D-pv5.2.so.1  libvtkCommonColor-pv5.2.so.1  libvtkCommonMath-pv5.2.so.1  libvtkCommonMathPython27D-pv5.2.so.1  libvtkCommonMisc-pv5.2.so.1  libvtkCommonSystem-pv5.2.so.1  libvtkCommonTransforms-pv5.2.so.1  libvtkCommonTransformsPython27D-pv5.2.so.1  libvtkCosmoHaloFinder-pv5.2.so.1  libvtkDICOMParser-pv5.2.so.1  libvtkDomainsChemistry-pv5.2.so.1  libvtkDomainsChemistryOpenGL2-pv5.2.so.1  libvtkDomainsChemistryOpenGL2Python27D-pv5.2.so.1  libvtkFiltersAMR-pv5.2.so.1  libvtkFiltersAMRPython27D-pv5.2.so.1  libvtkFiltersFlowPaths-pv5.2.so.1  libvtkFiltersFlowPathsPython27D-pv5.2.so.1  libvtkFiltersGeneral-pv5.2.so.1  libvtkFiltersHybrid-pv5.2.so.1  libvtkFiltersHybridPython27D-pv5.2.so.1  libvtkFiltersHyperTreePython27D-pv5.2.so.1  libvtkFiltersImagingPython27D-pv5.2.so.1  libvtkFiltersModeling-pv5.2.so.1  (+120 more)
ParaView/lib/python2.7/: _sysconfigdata.py
ParaView/share/applications/: paraview.desktop
config/: RunParams.json  makeGeom.C
include/: ChargeData.h  ChargeHits.h  KalmanFit.h  NoiseFilter.h  PrincipalComponentsCluster.h  RunParams.h
paraview/lib/: libmpl.so.1.1.0
scripts/: display_loop_pca.sh  display_pca.py  superImpose2Histograms.C
src/: ChargeData.cpp  ChargeHits.cpp  Event.cpp  KalmanFit.cpp  PrincipalComponentsCluster.cpp  RunParams.cpp
(+160 files in other folders)
